*Done* 1. Updated project to handle doc generation though Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.28.0)
 
-project(ButtonDebounce VERSION 1.0.0 LANGUAGES C)
+project(ButtonDebounce VERSION 1.0.0 LANGUAGES C DESCRIPTION "A collection of Debouncing algorithms suitable for embedded environments")
 
 add_executable(App)
 
@@ -21,3 +21,12 @@ target_include_directories(VersionLib PUBLIC ${PROJECT_SOURCE_DIR}/inc)
 
 # Link static library to Final application 
 target_link_libraries(App PRIVATE VersionLib)
+
+# Generate Docs through doxygen
+option(BUILD_WITH_DOCS "Generate Docs" OFF)
+message("BUILD_WITH_DOCS: ${BUILD_WITH_DOCS}")
+if(BUILD_WITH_DOCS)
+    add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
+endif()
+
+
