*Done* 1. Integrated unity test framework into codeBase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,15 @@ project(ButtonDebounce VERSION 1.0.0 LANGUAGES C DESCRIPTION "A collection of De
 
 add_subdirectory(Src)
 
+option(BUILD_WITH_TESTS "Build Tests" OFF)
+message("BUILD_WITH_TESTS: ${BUILD_WITH_TESTS}")
+if(BUILD_WITH_TESTS)
+    enable_testing()
+    include(CTest)
+    add_subdirectory(external)
+    add_subdirectory(tests)
+endif()
+
 # Generate Docs through doxygen
 option(BUILD_WITH_DOCS "Generate Docs" OFF)
 message("BUILD_WITH_DOCS: ${BUILD_WITH_DOCS}")
