--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.28.0)
 
 project(ButtonDebounce VERSION 1.0.0 LANGUAGES C DESCRIPTION "A collection of Debouncing algorithms suitable for embedded environments")
 
-add_subdirectory(Src)
+option(OP_BUILD_APP "Build APP" ON)
+message("App build option: ${OP_BUILD_APP}")
+if(BUILD_APP)
+    add_subdirectory(Src)
+endif()
 
-option(BUILD_WITH_TESTS "Build Tests" OFF)
-message("BUILD_WITH_TESTS: ${BUILD_WITH_TESTS}")
-if(BUILD_WITH_TESTS)
+option(OP_BUILD_TESTS "Build Tests" OFF)
+message("Test build option: ${OP_BUILD_TESTS}")
+if(BUILD_TESTS)
     enable_testing()
     include(CTest)
     add_subdirectory(external)
@@ -14,9 +18,9 @@ if(BUILD_WITH_TESTS)
 endif()
 
 # Generate Docs through doxygen
-option(BUILD_WITH_DOCS "Generate Docs" OFF)
-message("BUILD_WITH_DOCS: ${BUILD_WITH_DOCS}")
-if(BUILD_WITH_DOCS)
+option(OP_BUILD_DOCS "Generate Docs" OFF)
+message("Documentation generation: ${OP_BUILD_DOCS}")
+if(BUILD_DOCS)
     add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
 endif()
 
