--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,5 +42,9 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      # run: ctest -C ${{env.BUILD_TYPE}}
+      run: | 
+        cmake --preset BUILD_TESTS 
+        cmake --build --preset BUILD_TESTS
+    
 
