--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,7 +44,8 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       # run: ctest -C ${{env.BUILD_TYPE}}
       run: | 
-        cmake --preset BUILD_TESTS 
-        cmake --build --preset BUILD_TESTS
+        cmake -S . -B build/tests -DOP_BUILD_TESTS=ON -DOP_BUILD_APP=OFF -DOP_BUILD_DOCS=OFF
+        cmake --build build/tests
+        ctest --test-dir build/tests
     
 
