cleaned up test build. Testing Github actions for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,13 @@ project(ButtonDebounce VERSION 1.0.0 LANGUAGES C DESCRIPTION "A collection of De
 
 option(OP_BUILD_APP "Build APP" ON)
 message("App build option: ${OP_BUILD_APP}")
-if(BUILD_APP)
+if(OP_BUILD_APP)
     add_subdirectory(Src)
 endif()
 
 option(OP_BUILD_TESTS "Build Tests" OFF)
 message("Test build option: ${OP_BUILD_TESTS}")
-if(BUILD_TESTS)
+if(OP_BUILD_TESTS)
     enable_testing()
     include(CTest)
     add_subdirectory(external)
@@ -20,7 +20,7 @@ endif()
 # Generate Docs through doxygen
 option(OP_BUILD_DOCS "Generate Docs" OFF)
 message("Documentation generation: ${OP_BUILD_DOCS}")
-if(BUILD_DOCS)
+if(OP_BUILD_DOCS)
     add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
 endif()
 
